--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,5 @@
 	<string name="cancel">Cancel</string>
 	<string name="register">Register</string>
 	<string name="error_account_disabled_or_deleted">Corresponding account has been disabled or deleted</string>
+	<string name="choose_subscription">Choose a subscription that fits your needs:</string>
 </resources>
