finished implementing the checkInput() behaviour. it is resetting the layout errors, defining the strings from the fields texts, checking if the input is ok and then calls RegistrationCheckerListener#inputIsOk callback. in the RegistrationFragment i implemented the behaviour of the subscribe button. it calls RegistrationChecker#checkInput and in the callback inputIsOk, it receives the bundle from RegistrationChecker#getInputBundle and passes this bundle through to the subscription fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,7 +107,7 @@
 	<string name="error_try_again">Oops. Something went wrong. Please try again</string>
 	<string name="error_stand_by">Oops. Something went wrong. Please stand by</string>
 	<string name="error_field_starts_with_whitespace">%1d cannot start with whitespace</string>
-	<string name="please_confirm">Please confirm</string>
+	<string name="error_please_confirm">Please confirm</string>
 	<string name="error_password_must_be_6_long">I need to be longer than 6 characters of your choice</string>
 	<string name="error_email_or_password_incorrect">Email or password incorrect</string>
 	<string name="error_no_user_found">There is no user record corresponding to this identifier. The user may have been deleted</string>
