--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,6 @@
 	<!-- Strings related to login -->
 	<string name="email">Email</string>
 	<string name="password">Password</string>
-	<string name="sign_in_or_register">Sign in or register</string>
-	<string name="sign_in">Sign in</string>
-	<string name="error_invalid_email">This email address is invalid</string>
-	<string name="error_password_too_short">This password is too short</string>
-	<string name="error_password_incorrect">This password is incorrect</string>
-	<string name="error_field_is_required">This field is required</string>
 	<string name="open_navigation_drawer">Open navigation drawer</string>
 	<string name="close_navigation_drawer">Close navigation drawer</string>
 	<string name="settings">Settings</string>
@@ -19,29 +13,10 @@
 	<string name="search">Search</string>
 	<string name="favorites">Favorites</string>
 	<string name="submit_an_ad">Submit an Ad</string>
-	<string name="escort_service">Escort service</string>
-	<string name="my_account">My Account</string>
-	<string name="i_offer">I offer</string>
-	<string name="i_am_looking">I am looking</string>
-	<string name="mode_with_placeholder">Mode: %1s</string>
-	<string name="email_with_placeholder">E-Mail: %1s</string>
-	<string name="name_with_placeholder">Name: %1s</string>
 	<string name="home">Home</string>
-	<string name="close_to_you">Close to you:</string>
-	<string name="distance_with_placeholder">Distance: %1s</string>
-	<string name="i_want_to_offer">I want to offer:</string>
-	<string name="i_am_looking_for">I am looking for:</string>
-	<string name="sign_me_up">Sign me up</string>
 	<string name="log_in">Log in</string>
-	<string name="or">or</string>
-	<string name="error_auth_failed">Authentication failed!</string>
-	<string name="check_email">Check Email</string>
-	<string name="error_verification_email_send_failed">Sending Verification Email failed</string>
-	<string name="question_no_account_yet">No account yet?</string>
 	<string name="sign_up_using_these_colon">Sign up using these:</string>
 	<string name="first_name">First Name</string>
-	<string name="sign_up_now">Sign up now</string>
-	<string name="google">Google</string>
 	<string name="or_log_in_using">or log in using</string>
 	<string name="logging_in_ellipsis">Logging in&#8230;</string>
 	<string name="plainGoogle">Google</string>
@@ -53,7 +28,6 @@
 	<string name="confirmation_message_legalities">I confirm that I\'ve read and accepted the Terms and Conditions and Privacy Policy</string>
 	<string name="processing_login">Processing login</string>
 	<string name="placeholders_for_date_of_birth">%1d.%1d.%1d</string>
-	<string name="date_of_birth">Date of birth</string>
 	<string name="username_with_star">Username*</string>
 	<string name="message_edit_text_your_displayed_name">This will be your displayed name</string>
 	<string name="email_with_star">Email*</string>
@@ -62,7 +36,6 @@
 	<string name="subscribe">Subscribe</string>
 	<string name="family_name">Family name</string>
 	<string name="username">Username</string>
-	<string name="press_again_to_exit">Press again to exit</string>
 	
 	<!-- Keys -->
 	<!-- Hashmap Keys -->
@@ -77,11 +50,9 @@
 	
 	<!-- Intent Keys -->
 	<!-- The company name is not yet set so it's happyapp.happyapp -->
-	<string name="intent_key_firebase_user">happyapp.happyapp.intent.keys.firebase_user</string>
 	<!-- END Intent Keys -->
 	
 	<!-- Firestore Field Keys -->
-	<string name="firestore_key_collection_subscriptions">subscriptions</string>
 	<string name="firestore_key_collection_users">users</string>
 	<string name="firestore_key_column_date_of_birth">date of birth</string>
 	<string name="firestore_key_column_date_of_creation">date of creation</string>
@@ -89,7 +60,6 @@
 	<string name="firestore_key_column_first_name">first name</string>
 	<string name="firestore_key_column_email">email</string>
 	<string name="firestore_key_column_profile_picture">profile picture</string>
-	<string name="firestore_key_column_subscription_variant">subscription variant</string>
 	<string name="firestore_key_column_username">username</string>
 	<!-- END Firestore Field Keys -->
 	
@@ -111,9 +81,6 @@
 	<string name="error_please_confirm">Please confirm</string>
 	<string name="error_password_must_be_6_long">I need to be longer than 6 characters of your choice</string>
 	<string name="error_email_or_password_incorrect">Email or password incorrect</string>
-	<string name="error_no_user_found">There is no user record corresponding to this identifier. The user may have been deleted</string>
-	<string name="reloading_user_information">Reloading User information</string>
-	<string name="email_sent_to_placeholder">Email sent to %1s</string>
 	<string name="no_internet_connection">No internet connection</string>
 	<string name="retry">Retry</string>
 	
@@ -124,18 +91,11 @@
 	<string name="subscription_platinum">happyapp.subscription.platinum</string>
 	<!-- END Subscription IDs -->
 	<string name="google_time_server_url">time.google.com</string>
-	<string name="email_verification_notice">Please verify your email before continuing. \nVerification sent to:</string>
-	<string name="open_email">Open Email</string>
-	<string name="resend">Resend</string>
-	<string name="change_amp_resend"><![CDATA[Change & Resend]]></string>
-	<string name="user_should_not_be_here">Looks like you should not be here. Please try to restart or relog.</string>
-	<string name="_404">404</string>
-	<string name="too_many_attempts">Too many attempts. Please relax.</string>
-	<string name="chooser_title">Open Email</string>
-	<string name="no_suitable_app_found">No suitable app found</string>
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
-	<string name="register">Register</string>
 	<string name="error_account_disabled_or_deleted">Corresponding account has been disabled or deleted</string>
-	<string name="choose_subscription">Choose a subscription that fits your needs:</string>
+	<string name="sign_up_and_subscribe_for_happyapp">Sign up and subscribe for HappyApp</string>
+	
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="next">Next</string>
 </resources>
