--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
 	<string name="error_account_disabled_or_deleted">Corresponding account has been disabled or deleted</string>
-	<string name="sign_up_and_subscribe_for_happyapp">Sign up and subscribe for HappyApp</string>
+	<string name="sign_up_and_subscribe_to_happyapp">Sign up and subscribe to HappyApp</string>
 	<string name="next">Next</string>
 	<string name="forgot_my_login">Forgot my login</string>
 	<string name="error_email_or_password_empty">Email or password empty</string>
@@ -104,4 +104,5 @@
 	<string name="note_forgot_email_not_implemented">Note: For the case that you forgot your email or have no access to it any longer, we ask you to contact our support team to further help you. The feature to reset your login credentials without access to your email has not yet been implemented, as we are working on it. Thank you very much for your patience.</string>
 	<string name="email_sent">Email sent</string>
 	<string name="error_email_not_recognized">This email is not recognized by our systems</string>
+	<string name="sign_up_with_google_and_subscribe_to_happyapp">Sign up with Google and subscribe to HappyApp</string>
 </resources>
