made the ViewPager2 for subscriptions layout architecture working. looks great. next up is the business logic! i created a new error fragment that shows an error and has a retry button connected over a listener. moved the files in some new packages for clearer navigation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,9 @@
 	<string name="email_sent">Email sent</string>
 	<string name="error_email_not_recognized">This email is not recognized by our systems</string>
 	<string name="sign_up_with_google_and_subscribe_to_happyapp">Sign up with Google and subscribe to HappyApp</string>
+	<string name="loading">Loading</string>
+	<string name="silver">Silver</string>
+	<string name="platinum">Platinum</string>
+	<string name="gold">Gold</string>
+	<string name="bronze">Bronze</string>
 </resources>
