Implementation of the BillingRepository works so far. And great. I got the ViewPager2 showing the different Subscription offers working. I have a little bit of performance concerns there and these concerns are to address after the release. I have also changed my approach with the ViewPager2 architecture and therefore deleted the unnecessary ..ContainerFragments.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,12 @@
 	<string name="platinum">Platinum</string>
 	<string name="gold">Gold</string>
 	<string name="bronze">Bronze</string>
+	<string name="bronze_subscription_logo">Bronze subscription logo</string>
+	<string name="happyapp_bronze">HappyApp Bronze</string>
+	<string name="happyapp_silver">HappyApp Silver</string>
+	<string name="happyapp_gold">HappyApp Gold</string>
+	<string name="happyapp_platinum">HappyApp Platinum</string>
+	<string name="gold_subscription_logo">Gold subscription logo</string>
+	<string name="platinum_subscription_logo">Platinum subscription logo</string>
+	<string name="silver_subscription_logo">Silver subscription logo</string>
 </resources>
