--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
 	<string name="error_you_forgot_me">You forgot me</string>
 	<string name="error_username_is_already_taken">Username is already taken</string>
 	<string name="error_email_is_already_in_use">This email is already in use</string>
-	<string name="error_email_is_badly_formatted">This email is badly formatted</string>
+	<string name="error_email_is_badly_formatted">Your email is badly formatted</string>
 	<string name="error_try_again">Oops. Something went wrong. Please try again</string>
 	<string name="error_stand_by">Oops. Something went wrong. Please stand by</string>
 	<string name="error_field_starts_with_whitespace">%1d cannot start with whitespace</string>
@@ -122,4 +122,5 @@
 	<string name="legalities_info">Note: By clicking %1s, you accept our %2s and %3s.</string>
 	<string name="privacy_policy">Privacy Policy</string>
 	<string name="terms_and_conditions">Terms and Conditions</string>
+	<string name="error_not_18">You must be 18 or older to register an account for our services.</string>
 </resources>
