--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 	<string name="android_studio">Android Studio</string>
 	<string name="android_studio_email">android.studio@android.com</string>
 	<string name="navigation_header">Navigation header</string>
-	<string name="contact_us">Contact us</string>
+	<string name="contact">Contact</string>
 	<string name="search">Search</string>
 	<string name="favorites">Favorites</string>
 	<string name="submit_an_ad">Submit an Ad</string>
@@ -123,4 +123,6 @@
 	<string name="privacy_policy">Privacy Policy</string>
 	<string name="terms_and_conditions">Terms and Conditions</string>
 	<string name="error_not_18">You must be 18 or older to register an account for our services.</string>
+	<string name="account">Account</string>
+	<string name="general">General</string>
 </resources>
