Changed the ViewPager2's implementation. Instead of single Fragments, I am now using a universal View for it. This improved the ViewPager2's performance a lot, too. I resolved the error with the Group visibilities. I simply changed to the latest ConstraintLayout version.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@
 	<string name="error_not_18">You must be 18 or older to register an account for our services.</string>
 	<string name="account">Account</string>
 	<string name="general">General</string>
+	<string name="subscription_logo">Subscription logo</string>
 </resources>
